--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         Desuden som servicehund for blinde og handicappede,<br />
         som politi- og redningshund, som narkohund eller som terapihund. <br />
         Hunde kan også lugte sig frem til kræftsvulster,[2] <br />
-        termitangreb og forudsige epilepsianfald.[3]</p>
+        termitangreb og forudsige epilepsianfald.[3]<br/>
+        denne side er lavet af Anders </p>
   </body>
 </html>
